@@ -71,32 +71,32 @@
         <summary>
 	  Asks the widget that the input context is attached to to delete
 	  characters around the cursor position by emitting the
-	  <see cref="E:Gtk.IMContext.DeleteSurrounding"/> signal. 
+	  <see cref="E:Gtk.IMContext.DeleteSurrounding" /> signal. 
 	</summary>
         <param name="offset">a <see cref="T:System.Int32" /></param>
         <param name="n_chars">a <see cref="T:System.Int32" /></param>
-        <returns>a <see cref="T:System.Boolean" />, <see langword="true"/> if the signal was handled.</returns>
+        <returns>a <see cref="T:System.Boolean" />, <see langword="true" /> if the signal was handled.</returns>
         <remarks>
-	  <para>
-	    Note that <paramref name="offset"/> and <paramref name="n_chars"/>
+          <para>
+	    Note that <paramref name="offset" /> and <paramref name="n_chars" />
 	    are in characters not in bytes, which differs from the usage other
-	    places in <see cref="T:Gtk.IMContext"/>.
+	    places in <see cref="T:Gtk.IMContext" />.
 	  </para>
-	  <para>
+          <para>
 	    In order to use this function, you should first call
-	    <see cref="M:Gtk.IMContext.GetSurrounding"/>
+	    <see cref="M:Gtk.IMContext.GetSurrounding" />
 	    to get the current context, and
 	    call this function immediately afterwards to make sure that you
 	    know what you are deleting. You should also account for the fact
 	    that even if the signal was handled, the input context might not
 	    have deleted all the characters that were requested to be deleted.
 	  </para>
-	  <para>
+          <para>
 	    This function is used by an input method that wants to make
 	    subsitutions in the existing text in response to new input. It is
 	    not useful for applications.
 	  </para>
-	</remarks>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="FilterKeypress">
@@ -167,7 +167,7 @@
       <Docs>
         <summary>
 	  Set the client window for the input context; this is the
-	  <see cref="T:Gdk.Window"/> in which the input appears. 
+	  <see cref="T:Gdk.Window" /> in which the input appears. 
 	</summary>
         <param name="value">a <see cref="T:Gdk.Window" /></param>
         <returns>a <see cref="T:Gdk.Window" /></returns>
@@ -214,8 +214,8 @@
         <param name="value">a <see cref="T:System.Boolean" /></param>
         <returns>a <see cref="T:System.Boolean" /></returns>
         <remarks>
-	  If <paramref name="use_preedit"/> is <see langword="false"/> (default
-	  is <see langword="true"/>), then the IM context may use some other method to display
+	  If <paramref name="use_preedit" /> is <see langword="false" /> (default
+	  is <see langword="true" />), then the IM context may use some other method to display
 	  feedback, such as displaying it in a child of the root window.
 	</remarks>
       </Docs>
@@ -310,19 +310,19 @@
       </Docs>
     </Member>
     <Member MemberName="GetSurrounding">
-      <MemberSignature Language="C#" Value="public bool GetSurrounding (string text, out int cursor_index);" />
+      <MemberSignature Language="C#" Value="public bool GetSurrounding (out string text, out int cursor_index);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Boolean</ReturnType>
       </ReturnValue>
       <Parameters>
-        <Parameter Name="text" Type="System.String" />
+        <Parameter Name="text" Type="System.String&amp;" RefType="out" />
         <Parameter Name="cursor_index" Type="System.Int32&amp;" RefType="out" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Gets the context around the insertion point.</summary>
         <param name="text">a <see cref="T:System.String" /></param>
-        <param name="cursor_index">a <see cref="T:System.Int32&amp;" /></param>
+        <param name="cursor_index">a <see cref="T:System.Int32" /></param>
         <returns>a <see cref="T:System.Boolean" /></returns>
         <remarks />
       </Docs>
