@@ -195,6 +195,7 @@
   <attr path="/api/namespace/object[@cname='GtkImage']/method[@name='GetStock']/*/*[@name='stock_id']" name="pass_as">out</attr>
   <attr path="/api/namespace/object[@cname='GtkImage']/method[@name='SetFromPixmap']/*/*[@type='GdkBitmap*']" name="null_ok">1</attr>
   <attr path="/api/namespace/object[@cname='GtkIMContext']/signal[@name='DeleteSurrounding']" name="name">SurroundingDeleted</attr>
+  <attr path="/api/namespace/object[@cname='GtkIMContext']/method[@name='GetSurrounding']/*/*[@name='text']" name="pass_as">out</attr>
   <attr path="/api/namespace/object[@cname='GtkInvisible']/property[@name='Screen']" name="new_flag">1</attr>
   <attr path="/api/namespace/object[@cname='GtkItemFactory']/constructor[@cname='gtk_item_factory_new']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='GtkItemFactory']/method[@name='GetItemByAction']" name="name">GetItem</attr>
