@@ -1,5 +1,10 @@
 2005-01-04  Mike Kestner  <mkestner@novell.com>
 
+	* gtk/Gtk.metadata : mark an out param for IMContext.GetSurrounding.
+	[Fixes #70995]
+
+2005-01-04  Mike Kestner  <mkestner@novell.com>
+
 	* gtk/CellLayout.custom : declare SetAttributes and SetCellDataFunc.
 	* gtk/CellView.custom : impl SetAttributes and SetCellDataFunc.
 	* gtk/ComboBox.custom : impl SetAttributes and SetCellDataFunc.
